# fp-syd-free

./: .ghci  COPYING  README.md  fp-syd-free.cabal
demo/: Main.hs  fp-syd-free-demo.cabal
demo/Talks/Free/: Demo.hs
src/Talks/: Free.hs
src/Talks/Free/: Alt.hs  Core.hs  Language.hs  LanguageExample.hs  Prelude.hs  Ugly.hs  UglyExample.hs
test/: Main.hs  fp-syd-free-test.cabal
test/Talks/Free/: Tests.hs
