Name:               fp-syd-free
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          (c) 2012 Mark Hibberd
Synopsis:           Code for FP-Syd talk on Free.
Category:           Acme
Homepage:           https://github.com/markhibberd/fp-syd-free
Bug-reports:        https://github.com/markhibberd/fp-syd-free/issues
Cabal-Version:      >= 1.8
Build-Type:         Simple
Description:
  fp-syd-free

Source-Repository   head
  Type:             git
  Location:         https://github.com/markhibberd/fp-syd-free.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base                            >= 3          && < 5

  GHC-Options:
                    -Wall -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Talks.Free
                    Talks.Free.Core

