Name:               fp-syd-free-test
Version:            0.0.1
License:            BSD3
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          Mark Hibberd
Synopsis:           Test package for Code for FP-Syd talk on Free.
Category:           Experimental
Description:        Test package for Code for FP-Syd talk on Free.
Homepage:           https://github.com/markhibberd/fp-syd-free
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         https://github.com/markhibberd/fp-syd-free.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          migrate-test
  Hs-Source-Dirs:
                    ../../src .

  Main-Is:
                    Main.hs

  Ghc-Options:
                    -O2
                    -Wall
                    -fhpc
                    -fwarn-tabs

  Build-Depends:
                   base >= 3 && < 5
                   , QuickCheck
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit

